# final-project-level3-recsys-10

./: .gitignore  Dockerfile  Makefile  README.md  abtest.ipynb  autorec.ipynb  autorec_crawling.ipynb  pyproject.toml  requirements.txt  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Issue-template.md
.github/workflows/: docker-publish.yml
EDA/: beeradvocate_EDA_styoo.ipynb  db_setting.ipynb  ratebeer_EDA_gyeongtae.ipynb
app/: frontend.py
backend/: __main__.py  main.py  model.py
backend/DB/: crud.py  main.py  models.py  schemas.py
backend/DB-test/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/: __main__.py  main.py
backend/app/DB/: crud.py  database.py  db_query_example.ipynb  models.py  schemas.py  test_crud.py  test_main.py  test_models.py  test_schemas.py
backend/recommendAPI/: autorec.ipynb  autorec_crawling.ipynb  model.py
data_engineering/: data_preprocessing.ipynb  data_preprocessing_for_implicit.ipynb  data_train_ratings.ipynb  data_train_ratings_for_small.ipynb  data_train_ratings_for_small_implicit.ipynb
frontend/: config.py  ui.py  utils.py
frontend/templates/: beer.html  beerList.html  coldstart.html  footer.html  guide.html  header.html  index.html  login.html  nickname_login.html  recommend.html  register.html  result.html
model/: autorec.ipynb  autorec_crawling.ipynb  autorec_experiment.ipynb  autorec_experiment_bce.ipynb  autorec_experiment_rmse.ipynb  autorec_experiment_rmse_normalize.ipynb  autorec_implicit_korean.ipynb  autorec_implicit_korean_test.ipynb  model.py  popular.ipynb
(+39 files in other folders)
