[tool.poetry]
name = "4beer-fastapi"
version = "0.1.0"
description = "FastAPI 4beer"
authors = ["dongseok1541 <lds2201@naver.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
pandas = "1.0.0"
pydentic = "^0.0.1-alpha.3"
streamlit = "^1.9.0"
make = "^0.1.6"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.36"
sqlmodel = "^0.0.6"
PyYAML = "^6.0"
torch = "1.10.0"
fastapi-login = "^1.8.2"
jose = "^1.0.0"
python-jose = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
