[tool.poetry]
name = "egsbj-fastapi"
version = "0.1.0"
description = ""
authors = ["dongseok1541 <lds2201@naver.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
pandas = "1.0.0"
psycopg2 = "^2.9.3"
python-jose = "^3.3.0"
PyYAML = "^6.0"
SQLAlchemy = "^1.4.37"
torch = "^1.11.0"
uvicorn = "^0.17.6"
sklearn = "^0.0"
python-multipart = "^0.0.5"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
